--- a/Ejercicio3_2/Views/VListStud.xaml
+++ b/Ejercicio3_2/Views/VListStud.xaml
@@ -12,8 +12,11 @@
             <StackLayout.BindingContext>
                 <vm:VMListStud></vm:VMListStud>
             </StackLayout.BindingContext>
-            <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
-                <Label Text="Listado"/>
+            <StackLayout HorizontalOptions="Center" Margin="20">
+                <Label Text="Listado de Estudiantes"
+                       FontSize="24"
+                       HorizontalOptions="CenterAndExpand"
+                       Margin="0,20"/>
             </StackLayout>
             <CollectionView x:Name="listStud"
                             SelectionMode="Single"
@@ -21,70 +24,60 @@
                             SelectionChanged="listStud_SelectionChanged">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto"/>
-                                <ColumnDefinition Width="Auto"/>
-                                <ColumnDefinition Width="Auto"/>
-                            </Grid.ColumnDefinitions>
-                            <Image x:Name="imgL"
-                                   Grid.Row="0"
-                                   Grid.Column="0"
-                                   Source="{Binding Foto, Converter={StaticResource ByteArray}}"
-                                   WidthRequest="50"
-                                   HeightRequest="50"/>
-                            <Label x:Name="lblName"
-                                   Grid.Row="0"
-                                   Grid.Column="1"
-                                   WidthRequest="100"
-                                   Text="{Binding Nombres}"/>
-                            <Label x:Name="lblApel"
-                                   Grid.Row="0"
-                                   Grid.Column="2"
-                                   WidthRequest="100"
-                                   Text="{Binding Apellidos}"/>
-                        </Grid>
+                        <Frame BackgroundColor="#F0F0F0"
+                               Padding="10"
+                               Margin="10"
+                               CornerRadius="8">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+                                <Image x:Name="imgL"
+                                       Grid.Row="0"
+                                       Grid.Column="0"
+                                       Source="{Binding Foto, Converter={StaticResource ByteArray}}"
+                                       WidthRequest="50"
+                                       HeightRequest="50"
+                                       Aspect="AspectFill"/>
+                                <StackLayout Grid.Row="0"
+                                             Grid.Column="1"
+                                             Spacing="5">
+                                    <Label x:Name="lblName"
+                                           Text="{Binding Nombres}"
+                                           FontSize="16"
+                                           FontAttributes="Bold"/>
+                                    <Label x:Name="lblApel"
+                                           Text="{Binding Apellidos}"
+                                           FontSize="14"/>
+                                </StackLayout>
+                            </Grid>
+                        </Frame>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
             </CollectionView>
-            <!--<ListView x:Name="studList"
-                      HasUnevenRows="True"
-                      ItemsSource="{Binding StudList}"
-                      >
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <ViewCell>
-                            <StackLayout Orientation="Horizontal">
-                                <StackLayout>
-                                    <Image x:Name="img"
-                                           Source="{Binding Foto, Converter={StaticResource ByteArray}}"
-                                           WidthRequest="50"
-                                           HeightRequest="50"/>
-                                </StackLayout>
-                                <StackLayout>
-                                    <Label x:Name="lblName"
-                                           Text="hola" 
-                                           WidthRequest="80"/>
-                                    <Label x:Name="lblsName"
-                                           Text="{Binding Apellidos}" 
-                                           WidthRequest="80"/>
-                                </StackLayout>
-                            </StackLayout>
-                        </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>-->
-            <StackLayout>
+            <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="End" Margin="20">
                 <Button x:Name="btnDel" 
                         Text="Eliminar"
-                        Clicked="btnDel_Clicked"/>
+                        Clicked="btnDel_Clicked"
+                        BackgroundColor="#E74C3C"
+                        TextColor="White"
+                        CornerRadius="10"
+                        HeightRequest="40"
+                        WidthRequest="120"
+                        Margin="0,10"/>
                 <Button x:Name="btnEdit" 
                         Text="Editar"
-                        Clicked="btnEdit_Clicked"/>
+                        Clicked="btnEdit_Clicked"
+                        BackgroundColor="#3498DB"
+                        TextColor="White"
+                        CornerRadius="10"
+                        HeightRequest="40"
+                        WidthRequest="120"/>
             </StackLayout>
         </StackLayout>
     </ContentPage.Content>
